# SCS

./: .gitignore  ModelOverview.ipynb  README.md  TODO.md  pyproject.toml  series.csv  series.npy  tutorial.ipynb
PCW2023_poster/: DASH.ipynb  FF.ipynb  degrade.ipynb  transf.ipynb
PaperFigs/: Table.ipynb
data/: sn_data.RP.parquet  sn_data_trn.RP.parquet  sn_data_tst.RP.parquet
data/R100/: df_PR_tst.parquet  df_RP.parquet  df_RP_trn.parquet  (+2 more)
nb/: README.md  SNR_dev.ipynb  SNR_dev_feds_code.ipynb  SNR_fft.ipynb  SNR_review.ipynb  Untitled.ipynb  adding_noise.ipynb  dev_PE.ipynb  dev_calc_SNR_of_line.ipynb  encoder_decoder.ipynb  figuring_out_random_guess_prob.ipynb  hierarchical_dev.ipynb  interactive_model.ipynb  model_cm.ipynb  model_review.ipynb  positional_encoding_dev.ipynb  random_guess_accuracy.ipynb  refactor_base.ipynb  setting_the_train_test_split.ipynb  xgboost.ipynb
scripts/: batch_train.sh  snr_test.sh  train.sh
scs/: data_augmentation.py  data_degrading.py  data_loading.py  data_plotting.py  data_preparation.py  execute_train.py  extract_noise.py  generate_dataframe.py  hp_sets.py  learn.py  lr_schedules.py  measure_signal.py  models.py  module_flags.py  prepare_R_data.py  prepare_dataset.py  prepare_datasets_for_training.py  scs.py  scs_config.py  sn_config.py  snr_test.py  snr_test_new.py  testing_noise_extraction.ipynb  train_transformer.py  train_transformer_batch.py  unittests.py
storyboarding/: storyboard_LowRes.md  storyboard_SCS.md  storyboarding.md
test/: DSPS2023_autoencoders_8dec23.ipynb  DSPS2023_transformer_sn_classification.ipynb
(+25 files in other folders)
