[tool.poetry]
name = "scs"
version = "0.1.0"
description = "Spectral Classification of Supernovae"
authors = ["Willow Fox Fortino <fortino@udel.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
black = "^23.11.0"
icecream = "^2.1.3"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
astropy = "^5.3.4"
emcee = "^3.1.4"
corner = "^2.2.2"
statsmodels = "^0.14.0"
ipython = "^8.17.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"
torch = "^2.1.1"
keras = "^2.15.0"
tensorflow = "^2.15.0"
numba = "^0.58.1"
pyarrow = "^14.0.1"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
